aria labels for buttons & backToTopBtn z-index fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ section {
 	transform-origin: center center;
 }
 .back-to-top {
+	z-index: 10;
 	position: fixed;
 	right: 1rem;
 	bottom: -80px;
